--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint:js": "xo",
     "lint": "run-s lint:*",
     "test": "run-s lint",
-    "watch:site": "eleventy --serve",
+    "watch:site": "eleventy --serve --config=eleventy.config.js",
     "watch:assets": "cross-env NODE_ENV=development run-s \"mix -- --watch\""
   },
   "repository": {
@@ -37,6 +37,7 @@
     "cross-env": "^7.0.0",
     "dotenv": "^8.2.0",
     "laravel-mix": "^5.0.1",
+    "laravel-mix-purgecss": "^5.0.0-rc.1",
     "laravel-mix-tailwind": "^0.1.0",
     "npm-run-all": "^4.1.5",
     "resolve-url-loader": "^3.1.0",
