--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Website for the Inclusive Design Research Centre.",
   "main": "eleventy.config.js",
   "scripts": {
-    "build:site": "eleventy --config=eleventy.config.js",
     "build:assets": "cross-env NODE_ENV=production run-s mix",
+    "build:site": "eleventy --config=eleventy.config.js",
     "build": "run-s clean build:*",
     "clean": "run-p clean:*",
     "clean:dist": "rimraf dist",
@@ -15,8 +15,8 @@
     "lint:js": "xo",
     "lint": "run-s lint:*",
     "test": "run-s lint",
-    "watch:site": "eleventy --serve --config=eleventy.config.js",
-    "watch:assets": "cross-env NODE_ENV=development run-s \"mix -- --watch\""
+    "watch:assets": "cross-env NODE_ENV=development run-s \"mix -- --watch\"",
+    "watch:site": "eleventy --serve --config=eleventy.config.js"
   },
   "repository": {
     "type": "git",
@@ -55,7 +55,6 @@
     "husky": "^4.2.3",
     "laravel-mix": "^5.0.1",
     "laravel-mix-purgecss": "^5.0.0-rc.1",
-    "laravel-mix-tailwind": "^0.1.0",
     "lint-staged": "^10.0.8",
     "npm-run-all": "^4.1.5",
     "resolve-url-loader": "^3.1.0",
@@ -65,6 +64,7 @@
     "stylelint": "^13.2.1",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-order": "^4.0.0",
+    "stylelint-scss": "^3.15.0",
     "tailwindcss": "^1.2.0",
     "vue-template-compiler": "^2.6.11",
     "xo": "^0.28.0"
