--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,13 @@
   command = "npm run build"
   publish = "dist"
   functions = "functions"
+
+[dev]
+  command = "npm run watch:site"
+  targetPort = 3000
+  publish = "dist"
+  autoLaunch = true
+
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
