--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "run-s lint:*",
     "test": "run-s lint",
     "watch:assets": "cross-env NODE_ENV=development run-s \"mix -- --watch\"",
-    "watch:site": "eleventy --serve --config=eleventy.config.js"
+    "watch:site": "eleventy --serve --port=3000 --config=eleventy.config.js"
   },
   "repository": {
     "type": "git",
