--- a/src/_data/projects.json
+++ b/src/_data/projects.json
@@ -2,50 +2,50 @@
     {
         "name": "Project We Count",
         "shortName": false,
-        "description": "TODO.",
+        "description": "Ensuring that data science, AI and machine learning are equitable and that people with disabilities can help to shape the future of data science.",
         "tags": [],
-        "link": "#"
+        "link": "https://wecount.inclusivedesign.ca/"
     },
     {
         "name": "Flexible Learning for Open Education",
         "shortName": "FLOE",
-        "description": "TODO.",
+        "description": "Designing open education for diverse learners.",
         "tags": [],
-        "link": "#"
+        "link": "http://floeproject.org/"
     },
     {
         "name": "Coding to Learn and Create",
         "shortName": false,
-        "description": "TODO.",
+        "description": "Co-designing inclusive educational coding tools and free creative activities, lessons, and projects that help kids learn, develop social and communication skills, and express themselves with code.",
         "tags": [],
-        "link": "#"
+        "link": "https://www.codelearncreate.org/"
     },
     {
         "name": "Platform Co-op Development Kit",
         "shortName": false,
-        "description": "TODO.",
+        "description": "Providing the tools and resources to start, grow and convert to platform co-ops.",
         "tags": [],
-        "link": "#"
+        "link": "https://platform.coop/blog/the-platform-co-op-development-kit/"
     },
     {
         "name": "Inclusive Cities",
         "shortName": false,
-        "description": "TODO.",
+        "description": "Co-designing connected cities, neighbourhoods, and spaces that are more diverse and inclusive.",
         "tags": [],
-        "link": "#"
+        "link": "https://cities.inclusivedesign.ca/"
     },
     {
         "name": "Social Justice Repair Kit",
         "shortName": false,
-        "description": "TODO.",
+        "description": "Helping to make youth movements welcoming for everyone.",
         "tags": [],
-        "link": "#"
+        "link": "https://www.sojustrepairit.org/"
     },
     {
         "name": "Centre on Inclusive Software for Learning",
         "shortName": "CISL",
-        "description": "TODO.",
+        "description": "Optimizing K-12 educational experiences for the diverse needs of all students.",
         "tags": [],
-        "link": "#"
+        "link": "http://cisl.cast.org/"
     }
 ]
