fix: correct widget type

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -187,7 +187,7 @@ collections:
               - {label: "Short Name", name: "shortName", widget: "string", required: false}
               - {label: "Description", name: "description", widget: "markdown", required: true}
               - {label: "Tags", name: "tags", widget: "list", required: false}
-              - {label: "Link", name: "link", widget: "url", required: true}
+              - {label: "Link", name: "link", widget: "string", required: true}
   - name: "pages"
     label: "Pages"
     label_singular: "Page"
